# RegistrationFormQml

RegistrationForm/: CMakeLists.txt  comboboxupdate.cpp  comboboxupdate.h  countries.xml  main.cpp  main.qml  qml.qrc  signupaction.qml  utility.h  xmlparser.cpp  xmlparser.h
RegistrationFormDeployedWin10/: countries.xml
